# object-datamosh

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: blender-5-modal-render-investigation.md  cpu-performance-release-validation.md  extreme-workflow-migration.md  full-frame-release-verification.md  issue-resolution-workflow-plan.html  release-notes-0.2.0.md  release-notes-0.3.0.md  release-notes-0.4.0.md  responsive-operations-release-verification.md
docs/evidence/: extreme-benchmark-baseline.json  issue-26-foreground-events-227edb8558828df05c5d43886725c2e4147c00849bbb2ed8d30bd3e4b90f0720.jsonl  issue-26-foreground-events-3bfd2036a12192d96d95579c6453a54248e04c75a73fbaea6b590ee25001acf8.jsonl  issue-26-foreground-events-73b61dac613fa7fbff87555776e383627f3dc72dc93942a70da2f4d5068f6725.jsonl  issue-26-foreground-events-d8f3aeb5a868535ca0fa164891be558af945bc6da38836c510570127f0aaf837.jsonl  issue-26-foreground-result.json  issue-26-gate-blender-smoke-046a8f865a10.json  issue-26-gate-blender-smoke-169c71abb74d.json  issue-26-gate-blender-smoke-22c8fa817ad0.json  issue-26-gate-blender-smoke-2a2b9f7cf4a4.json  issue-26-gate-blender-smoke-3d2cb1d10d03.json  issue-26-gate-blender-smoke-506be59189ff.json  issue-26-gate-blender-smoke-5dfe4be60f4e.json  issue-26-gate-blender-smoke-659deed7dbe9.json  issue-26-gate-blender-smoke-6ba35b82a35a.json  issue-26-gate-blender-smoke-6c83600846d2.json  issue-26-gate-blender-smoke-879b45172c1a.json  issue-26-gate-blender-smoke-9a5bf5993e1e.json  issue-26-gate-blender-smoke-a8d56821ff52.json  issue-26-gate-blender-smoke-bfec947538ba.json  issue-26-gate-blender-smoke-c16b863bca5e.json  issue-26-gate-blender-smoke-e4bceeb33a58.json  issue-26-gate-blender-smoke-e7afad53ba6e.json  issue-26-gate-blender-smoke.json  issue-26-gate-environment-sync-03ab03c3cd5f.json  issue-26-gate-environment-sync-1c3ce066777d.json  (+114 more)
scripts/: benchmark_bilinear_plans.py  benchmark_diagnostics_reports.py  benchmark_empty_effect_frames.py  benchmark_extreme.py  benchmark_full_frame_sampling.py  benchmark_release_workloads.py  issue26_evidence.py  issue26_foreground_probe.py  issue26_release_gates.py  run_issue26_foreground_probe.sh
src/object_datamosh/: __init__.py  (+17 more)
tests/: blender_combined_modal_smoke.py  blender_modal_test_support.py  blender_processing_modal_smoke.py  blender_raw_render_modal_smoke.py  blender_registered_modal_smoke.py  blender_smoke_test.py  create_calibration_scene.py  test_bilinear_plan_benchmark.py  test_blender_render_adapter.py  test_block_preparation.py  test_combined_failures.py  test_combined_processing.py  test_contracts.py  test_core_imports.py  test_diagnostics_report_benchmark.py  test_empty_effect_benchmark.py  test_existing_pass_operation.py  test_exr.py  test_extreme_benchmark.py  test_feedback.py  test_full_frame_documentation.py  test_full_frame_sampling_benchmark.py  test_issue26_evidence.py  test_issue26_release_gates.py  test_matte_providers.py  test_modal_lifecycle.py  test_orchestration.py  test_ownership.py  test_package.py  test_paths.py  test_processing_diagnostics.py  test_project_lock.py  test_raw_render.py  test_raw_render_operation.py  test_refresh_diagnostics.py  test_render_and_process_operation.py  test_sampling.py  test_sequence_processing.py  test_sequence_processing_reports.py  test_sequence_processing_timings.py
workflows/: resolve-ready-issues-core.mjs  resolve-ready-issues-core.test.mjs  resolve-ready-issues.integration.test.mjs  resolve-ready-issues.js
(+12 files in other folders)
