[project]
name = "object-datamosh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cmoyates", email = "cmoyates@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
object-datamosh = "object_datamosh:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
