[project]
name = "object-datamosh"
version = "0.3.0"
description = "Object-localized temporal feedback extension for Blender"
readme = "README.md"
authors = [
    { name = "cmoyates", email = "cmoyates@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fake-bpy-module-5-0>=20260128",
    "numpy>=1.26",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # import sorting
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ty]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src", "tests", "scripts"]
exclude = [
  ".venv",
  "**/__pycache__",
  "**/*.egg-info",
  "build",
  "dist",
  "*.zip",
]
respect-ignore-files = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--import-mode=importlib",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "unit: fast isolated tests",
  "integration: tests that touch filesystem, database, subprocesses, or external services",
  "slow: tests that are useful but too slow for every edit loop",
]
